WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43222
Setting empty document schemes on the WKContext shouldn't start the WebProcess
https://bugs.webkit.org/show_bug.cgi?id=43222
Summary
Setting empty document schemes on the WKContext shouldn't start the WebProcess
Brady Eidson
Reported
2010-07-29 17:32:42 PDT
Setting empty document schemes on the WKContext shouldn't start the WebProcess
Attachments
Patch
(2.55 KB, patch)
2010-07-29 17:33 PDT
,
Brady Eidson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2010-07-29 17:33:55 PDT
Created
attachment 63016
[details]
Patch
Sam Weinig
Comment 2
2010-07-29 17:39:43 PDT
Comment on
attachment 63016
[details]
Patch
> > void WebContext::registerURLSchemeAsEmptyDocument(const String& urlScheme) > { > - ensureWebProcess(); > + if (!hasValidProcess()) { > + m_schemesToRegisterAsEmptyDocument.add(urlScheme);
I think we always want to store these for the crashing case and we shouldn't clear them after sending. Otherwise, r=me.
Brady Eidson
Comment 3
2010-07-29 17:40:54 PDT
Committed
r64324
: <
http://trac.webkit.org/changeset/64324
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug