2010-07-29  Brady Eidson  <beidson@apple.com>

Reviewed by Sam Weinig.

        Setting empty document schemes on the WKContext shouldn't start the WebProcess
        <rdar://problem/8253734> and https://bugs.webkit.org/show_bug.cgi?id=43222

        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::ensureWebProcess):
        (WebKit::WebContext::registerURLSchemeAsEmptyDocument):
        * UIProcess/WebContext.h:


Canonical link: https://commits.webkit.org/55147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64324 268f45cc-cd09-0410-ab3c-d52691b4dbfc